change-bootstrap-styles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <section class="section-r-i">
     <div class="container">
-      <div class="section-1">
+      <div class="section-1 d-flex align-items-center justify-content-between">
         <div class="section-1-left col-sm-12 col-lg-6">
           <h2 class="h2">
             Repair and <br />
@@ -48,7 +48,7 @@
           </p>
           <button>CONTACT US</button>
         </div>
-        <div class="section-1-right col-sm-12 col-lg-6">
+        <div class="section-1-right col-sm-12 col-lg-6 w-50">
           <img src="assets/images/slider-img.png" />
         </div>
       </div>
@@ -56,7 +56,7 @@
   </section>
 
   <div class="container">
-    <div class="section-2">
+    <div class="section-2 d-flex align-items-center justify-content-between">
       <div class="section-2-box">
         <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
         <svg fill="#000000" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
@@ -101,7 +101,7 @@
 
   <section class="about_us">
     <div class="container">
-      <div class="about_us_content">
+      <div class="about_us_content d-flex align-items-center justify-content-between">
         <div class="about_us_content_left">
           <h3 class="h3">About Us</h3>
           <p>
@@ -122,7 +122,7 @@
   </section>
   <section class="section-r-i">
     <div class="container">
-      <div class="sec">
+      <div class="sec d-flex align-items-center justify-content-between">
         <div class="sec-r">
           <img src="assets/images/professional-img.png" alt="professional">
         </div>
@@ -139,9 +139,9 @@
   </section>
   <section class="sec4">
     <div class="container">
-      <div class="sec4-c">
+      <div class="sec4-c d-flex align-items-center justify-content-center flex-column">
         <h3 class="h3">Our Serviece</h3>
-        <div class="sec4-boxes">
+        <div class="sec4-boxes d-flex align-items-center justify-content-between flex-row">
           <div class="b-item">
             <img src="assets/images/s1.png " alt="">
             <h6>Main Tenance</h6>
@@ -166,9 +166,9 @@
   </section>
   <section class="sec5">
     <div class="container">
-      <div class="sec5-c">
+      <div class="sec5-c d-flex align-items-center justify-content-center flex-column">
         <H3 class="h3">WHAT OUR CLIENTS SAY</H3>
-        <div class="sec5-boxes">
+        <div class="sec5-boxes w-100 d-flex align-items-center justify-content-between">
           <div class="box">
             <div class="b-p1">
               <div class="flex-cu">
@@ -228,7 +228,7 @@
       <div class="sec6-c">
         <h3 class="h3">CONTACT US</h3>
         <div class="sec6-m">
-          <div class="form">
+          <div class="form d-flex align-items-center justify-content-start flex-column">
             <input type="text" placeholder="Name">
             <input type="phone" placeholder="Phone Number">
             <input type="email" placeholder="Email">
